--- a/admin/index.html
+++ b/admin/index.html
@@ -2,14 +2,11 @@
 title: "عنوان الصفحة"
 description: "هذا وصف يمكن تعديله من لوحة التحكم"
 ---
-
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Admin</title>
-  </head>
-  <body>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="ar">
+<head><meta charset="UTF-8"><title>{{ title }}</title></head>
+<body>
+  <h1>{{ title }}</h1>
+  <p>{{ description }}</p>
+</body>
 </html>
